--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://studentAdmin:9696767844@studentregistration.2hbpi5t.mongodb.net/studentDB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://rahul:rahul@cluster0.pkffxtq.mongodb.net/?appName=Cluster0
 PORT=4000
